--- a/index.html
+++ b/index.html
@@ -8,29 +8,59 @@
 today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
         <link rel="shortcut icon" type="image/x-icon" href="http://www.faithpopcorn.com/favicon.ico"/>
-        <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="stylesheets/screen.css">
     </head>
     <body class="main home">
         <header class="header clearfix">
-            <a class="menu_icon" href="#"><img src="images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
+            <a id="toggleMenu" class="menu_icon" href="#"><img src="images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
             <a class="brain_icon" href="index.html"><img src="images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
-            <h1 class="header_heading">HOME</h1>
+            <h1 id="mainHeading" class="header_heading">Home</h1>
         </header>
-        <div class="home_intro">
-            <a href="#" class="enter_home"></a>
-            <a href="http://www.faithpopcorn.com/" class="full_site">Visit Full Site Here</a>
+        <nav id="mainNav" class="main_nav hidden">
+            <ul class="nav_list">
+                <li><a href="futurist-ceo.html">Faith Popcorn</a></li>
+                <li><a href="trendbank.html">Trendbank</a></li>
+                <li><a href="consulting.html">Consulting</a></li>
+                <li><a href="culture-pulse.html">Culture Pulse</a></li>
+                <li><a href="talentbank.html">Talentbank</a></li>
+                <li><a href="press.html">Press</a></li>
+                <li><a href="the-team.html">The Futurists</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <div id="mainContent" class="home_intro">
+            <a id="enterHome" href="#" class="enter_home"></a>
+            <a id="fullSiteLink" href="http://www.faithpopcorn.com/" class="full_site">Visit Full Site Here</a>
+            <div id="carousel" class="home_carousel hidden">
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53f427e7e4b068e9905b4271/1408548511282/CXC.jpg?format=1500w" alt="CXC: Childfree by choice"></a>
+                </div>
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfc2ee4b00ca25556f54a/1408548227698/beauty.jpg?format=1500w" alt="Beauty is always on-trend"></a>
+                </div>
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d98c24e4b0b0f496008961/1408548237594/italian.png?format=1500w" alt="Back to the Italian future"></a>
+                </div>
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfe32e4b05b5aedd58305/1408548494851/Cupcake.jpg?format=1500w" alt="Move over cupcakes"></a>
+                </div>
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53daa14ae4b06489b3093916/1408548500915/Windows.png?format=1500w" alt="The most mesmerizing store windows in NYC"></a>
+                </div>
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfd19e4b08ff99312d35a/1408548504538/Coffee.jpg?format=1500w" alt="Post-Starbucks Scene"></a>
+                </div>
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d928e2e4b0db9fa02ce3f7/1408548506019/heroNew-3.jpg?format=1500w" alt="The power of plush"></a>
+                </div>
+            </div>
         </div>
-        <!-- Add your site or application content here -->
-        <p class="hidden">Hello world! This is HTML5 Boilerplate.</p>
-
         <footer class="footer">
             <h2 class="footer_heading">FAITH POPCORN'S <strong>BRAIN</strong>RESERVE</h2>
         </footer>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/main.js"></script>
-
     </body>
 </html>
