--- a/futurist-ceo.html
+++ b/futurist-ceo.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Faith Popcorn - Faith Popcorn's BrainReserve - Mobile</title>
-        <meta name="description" content="if you knew everything about tomorrow... what would you do differently 
+        <meta name="description" content="if you knew everything about tomorrow... what would you do differently
 today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,7 +30,12 @@ today?">
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <div id="mainContent">
+        <div id="mainContent" class="faith_content">
+            <div class="faith_social">
+                <a href="http://www.linkedin.com/pub/faith-popcorn/1/879/6b3" class="linkedin"></a>
+                <a href="https://www.facebook.com/FaithPopcorn?fref=ts" class="facebook"></a>
+                <a href="https://twitter.com/FaithPopcorn" class="twitter"></a>
+            </div>
             <div class="faith_title">
                 <h2>CEO</h2>
                 <h3>Futurist</h3>
@@ -38,6 +43,11 @@ today?">
             <div class="faith_press">
                 <img src="images/faith_press.png" alt="Quotes from media about Faith Popcorn">
             </div>
+            <p><strong>Faith Popcorn</strong>, best-selling author of The Popcorn Report, Clicking, EVEolution, Dictionary of the Future, and upcoming, Popcorn Report 2020: A Leap of Faith. She is founder and CEO of Faith Popcorn's BrainReserve, the futurist marketing consultancy she established in 1974.</p>
+            <p>The New York Times has called her "The Trend Oracle", Fortune Magazine named her, "The Nostradamus of Marketing", and she is recognized as America's foremost Trend expert. She has identified such sweeping societal movements as "Cocooning", "AtmosFear", "Anchoring", "99 Lives", "Icon Toppling" and "Vigilante Consumer". As key strategist for Faith Popcorn's BrainReserve, Faith applies her insight into cultural and business Trends to help FPBR clients reposition established brands/companies, develop new models and innovate. She is a trusted advisor to the CEOs of The Fortune 500.</p>
+            <p>With a documented 95% accuracy rate, Faith predicted thte demand for fresh foods and four-wheel drives, as well as the spiritual tenor of the millennium with Cocooning. She was the first to anticpate the explosive growth of home delivery, home businesses and home shopping. Additionally, she predicted the rise of Social Media and has a significant following on Facebook and Twitter. Her FutureView, which focuses on how Trends are affecting consumer lifestyles and purchasing behavior, has been presented to thousands of audiences across the globe. Heralded for her extraordinary ability to forecast emerging consumer patterns, Faith is frequently interviewed and cited in the media in The New York Times, Time, Newsweek, Fortune, "The Today Show", "Face the Nation", and CNN.</p>
+            <p>Faith was raised in Shanghai, China, is a fifth generation New Yorker, and a graduate of New York University and New York's High School of Performing Arts. She is the single mother of two Chines daughters, gg 14 and cc 7.</p>
+            <!--<h4 class="ask_faith_heading">Have a fabulous <strong>question</strong>? Get a fabulous <strong>answer</strong>.</h4>-->
         </div>
         <footer class="footer">
             <h2 class="footer_heading">FAITH POPCORN'S <strong>BRAIN</strong>RESERVE</h2>
