moved images to bucket

--- a/consulting.html
+++ b/consulting.html
@@ -14,8 +14,8 @@ today?">
     </head>
     <body class="main home">
         <header class="header clearfix">
-            <a id="toggleMenu" class="menu_icon" href="#"><img src="images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
-            <a class="brain_icon" href="index.html"><img src="images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
+            <a id="toggleMenu" class="menu_icon" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
+            <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">Our Methodology</h1>
         </header>
         <nav id="mainNav" class="main_nav hidden">
@@ -53,7 +53,7 @@ today?">
                     </div>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="images/prl.jpg" alt="Popcorn Report Live"></a>
+                    <a href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/prl.jpg" alt="Popcorn Report Live"></a>
                     <div class="method_description">
                         <div class="consulting_social right">
                             <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/consulting/" class="facebook"></a>
@@ -73,7 +73,7 @@ today?">
                     </div>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="images/trendbank.jpg" alt="Trendbank"></a>
+                    <a href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/trendbank.jpg" alt="Trendbank"></a>
                     <div class="method_description">
                         <div class="consulting_social right">
                             <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/consulting/" class="facebook"></a>
@@ -93,7 +93,7 @@ today?">
                     </div>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="images/speeches.jpg" alt="Speeches"></a>
+                    <a href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/speeches.jpg" alt="Speeches"></a>
                     <div class="method_description">
                         <div class="consulting_social right">
                             <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/consulting/" class="facebook"></a>
@@ -103,7 +103,7 @@ today?">
                     </div>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="images/futurescape.jpg" alt="Futurescape"></a>
+                    <a href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/futurescape.jpg" alt="Futurescape"></a>
                     <div class="method_description">
                         <div class="consulting_social right">
                             <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/consulting/" class="facebook"></a>
@@ -123,7 +123,7 @@ today?">
                     </div>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="images/futurevision.jpg" alt="Futurevision"></a>
+                    <a href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/futurevision.jpg" alt="Futurevision"></a>
                     <div class="method_description">
                         <div class="consulting_social right">
                             <a href="//www.facebook.com/sharer/sharer.php?u=http://www.faithpopcorn.com/consulting/" class="facebook"></a>
