--- a/futurist-ceo.html
+++ b/futurist-ceo.html
@@ -14,8 +14,8 @@ today?">
     </head>
     <body class="main home">
         <header class="header clearfix">
-            <a id="toggleMenu" class="menu_icon" href="#"><img src="images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
-            <a class="brain_icon" href="index.html"><img src="images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
+            <a id="toggleMenu" class="menu_icon" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
+            <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">Faith Popcorn</h1>
         </header>
         <nav id="mainNav" class="main_nav hidden">
@@ -41,7 +41,7 @@ today?">
                 <h3>Futurist</h3>
             </div>
             <div class="faith_press">
-                <img src="images/faith_press.png" alt="Quotes from media about Faith Popcorn">
+                <img src="//luke-aiello-5cnl.squarespace.com/assets/images/faith_press.png" alt="Quotes from media about Faith Popcorn">
             </div>
             <p><strong>Faith Popcorn</strong>, best-selling author of The Popcorn Report, Clicking, EVEolution, Dictionary of the Future, and upcoming, Popcorn Report 2020: A Leap of Faith. She is founder and CEO of Faith Popcorn's BrainReserve, the futurist marketing consultancy she established in 1974.</p>
             <p>The New York Times has called her "The Trend Oracle", Fortune Magazine named her, "The Nostradamus of Marketing", and she is recognized as America's foremost Trend expert. She has identified such sweeping societal movements as "Cocooning", "AtmosFear", "Anchoring", "99 Lives", "Icon Toppling" and "Vigilante Consumer". As key strategist for Faith Popcorn's BrainReserve, Faith applies her insight into cultural and business Trends to help FPBR clients reposition established brands/companies, develop new models and innovate. She is a trusted advisor to the CEOs of The Fortune 500.</p>
