--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Faith Popcorn's BrainReserve - Mobile</title>
-        <meta name="description" content="if you knew everything about tomorrow... what would you do differently 
+        <meta name="description" content="if you knew everything about tomorrow... what would you do differently
 today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,8 +14,8 @@ today?">
     </head>
     <body class="main home">
         <header class="header clearfix">
-            <a id="toggleMenu" class="menu_icon" href="#"><img src="images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
-            <a class="brain_icon" href="index.html"><img src="images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
+            <a id="toggleMenu" class="menu_icon" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
+            <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">Home</h1>
         </header>
         <nav id="mainNav" class="main_nav hidden">
