--- a/trendbank.html
+++ b/trendbank.html
@@ -14,8 +14,8 @@ today?">
     </head>
     <body class="main home">
         <header class="header clearfix">
-            <a id="toggleMenu" class="menu_icon" href="#"><img src="images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
-            <a class="brain_icon" href="index.html"><img src="images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
+            <a id="toggleMenu" class="menu_icon" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
+            <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
             <h1 id="mainHeading" class="header_heading">The 17 Trends</h1>
         </header>
         <nav id="mainNav" class="main_nav hidden">
@@ -33,52 +33,52 @@ today?">
         <div id="mainContent" class="trend_content">
             <div class="trend_carousel">
                 <div class="slide">
-                    <img src="images/99_lives.jpg" alt="99 Lives">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/99_lives.jpg" alt="99 Lives">
                 </div>
                 <div class="slide">
-                    <img src="images/anchoring.jpg" alt="Anchoring">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/anchoring.jpg" alt="Anchoring">
                 </div>
                 <div class="slide">
-                    <img src="images/atmosfear.jpg" alt="Atmosfear">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/atmosfear.jpg" alt="Atmosfear">
                 </div>
                 <div class="slide">
-                    <img src="images/being_alive.jpg" alt="Being Alive">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/being_alive.jpg" alt="Being Alive">
                 </div>
                 <div class="slide">
-                    <img src="images/cocooning.jpg" alt="Cocooning">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/cocooning.jpg" alt="Cocooning">
                 </div>
                 <div class="slide">
                     <img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcd3e4b085f70f2c9a57/1404689886174/cn.png?format=1000w" alt="Clanning">
                 </div>
                 <div class="slide">
-                    <img src="images/cashing_out.jpg" alt="Cashing Out">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/cashing_out.jpg" alt="Cashing Out">
                 </div>
                 <div class="slide">
-                    <img src="images/down_aging.jpg" alt="Down Aging">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/down_aging.jpg" alt="Down Aging">
                 </div>
                 <div class="slide">
-                    <img src="images/egonomics.jpg" alt="EGOnomics">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/egonomics.jpg" alt="EGOnomics">
                 </div>
                 <div class="slide">
-                    <img src="images/eveolution.jpg" alt="EVEolution">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/eveolution.jpg" alt="EVEolution">
                 </div>
                 <div class="slide">
-                    <img src="images/fantasy.jpg" alt="Fantasy Adventure">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/fantasy.jpg" alt="Fantasy Adventure">
                 </div>
                 <div class="slide">
-                    <img src="images/future_tense.jpg" alt="FutureTense">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/future_tense.jpg" alt="FutureTense">
                 </div>
                 <div class="slide">
                     <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcd8e4b078c586ecde31/1404690131386/pr.png?format=1000w" alt="Pleasure Revenge">
                 </div>
                 <div class="slide">
-                    <img src="images/indulgences.jpg" alt="Small Indulgences">
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/indulgences.jpg" alt="Small Indulgences">
                 </div>
                 <div class="slide">
                     <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcdbe4b085f70f2c9a67/1404690201706/so.png?format=1000w" alt="Save Our Society">
                 </div>
                 <div class="slide">
-                    <img src="images/icon_toppling.jpg" alt="Icon Toppling"></a>
+                    <img src="//luke-aiello-5cnl.squarespace.com/assets/images/icon_toppling.jpg" alt="Icon Toppling"></a>
                 </div>
                 <div class="slide">
                     <img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b9dabde4b085cca213943f/53b9dcdce4b085f70f2c9a69/1404690307154/vc.png?format=1000w" alt="Vigilante Consumer">
