init commit of team page and styling

--- a/talentbank.html
+++ b/talentbank.html
@@ -45,7 +45,7 @@ today?">
                 <a href="#dale" class="thumbnail" style="background-image: url(http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53cad68de4b006756b70bd71/53cc13fee4b03fc272f1e78d/1405883432076/atkins_dale.jpg?format=200w);"></a>
                 <a href="#deepak" class="thumbnail" style="background-image: url(http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53cad68de4b006756b70bd71/53cad69ae4b006756b70bd8f/1405811446389/deepak.jpg?format=200w)"></a>
             </div>
-            <div id="talentbankBios" class="talentbank_bios">
+            <div id="talentbankBios" class="bios">
                 <div id="grant" class="bio">
                     <div class="thumbnail" style="background-image: url(http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53bb092ae4b0cf224ee38193/53bb1366e4b00b0a9517278b/1405487671531/mccracken.jpg?format=400w)"></div>
                     <h2 class="bio_name">GRANT MCCRACKEN</h2>
