init commit of case studies and added to menu

--- a/case-studies.html
+++ b/case-studies.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Faith Popcorn's BrainReserve - Mobile</title>
+        <title>Case Studies - Faith Popcorn's BrainReserve - Mobile</title>
         <meta name="description" content="if you knew everything about tomorrow... what would you do differently
 today?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@ today?">
         <header class="header clearfix">
             <a id="toggleMenu" class="menu_icon" href="#"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/hamburger_icon.png" alt="icon denoting that a menu can be opened by clicking"></a>
             <a class="brain_icon" href="index.html"><img src="//luke-aiello-5cnl.squarespace.com/assets/images/brain_icon.png" alt="icon of faith popcorn's logo"></a>
-            <h1 id="mainHeading" class="header_heading">Home</h1>
+            <h1 id="mainHeading" class="header_heading">Case Studies</h1>
         </header>
         <nav id="mainNav" class="main_nav hidden">
             <ul class="nav_list">
@@ -31,30 +31,19 @@ today?">
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-        <div id="mainContent" class="home_intro">
-            <a id="enterHome" href="#" class="enter_home"></a>
-            <a id="fullSiteLink" href="http://www.faithpopcorn.com/" class="full_site">Visit Full Site Here</a>
-            <div id="carousel" class="home_carousel hidden">
+        <div id="mainContent" class="trend_content">
+            <div class="trend_carousel">
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53f427e7e4b068e9905b4271/1408548511282/CXC.jpg?format=1500w" alt="CXC: Childfree by choice"></a>
+                    <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266b4e4b0ebc5a8dc0d3b/1409443511011/?format=800w" alt="Home Depot">
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfc2ee4b00ca25556f54a/1408548227698/beauty.jpg?format=1500w" alt="Beauty is always on-trend"></a>
+                    <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266c8e4b0ebc5a8dc0d62/1409443530278/?format=800w" alt="Tyson">
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d98c24e4b0b0f496008961/1408548237594/italian.png?format=1500w" alt="Back to the Italian future"></a>
+                    <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266bce4b0ebc5a8dc0d47/1409443519256/?format=800w" alt="Tylenol">
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfe32e4b05b5aedd58305/1408548494851/Cupcake.jpg?format=1500w" alt="Move over cupcakes"></a>
-                </div>
-                <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53daa14ae4b06489b3093916/1408548500915/Windows.png?format=1500w" alt="The most mesmerizing store windows in NYC"></a>
-                </div>
-                <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfd19e4b08ff99312d35a/1408548504538/Coffee.jpg?format=1500w" alt="Post-Starbucks Scene"></a>
-                </div>
-                <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d928e2e4b0db9fa02ce3f7/1408548506019/heroNew-3.jpg?format=1500w" alt="The power of plush"></a>
+                    <img src="//static.squarespace.com/static/536934b6e4b0c3ef16a97e35/t/540266a5e4b0ebc5a8dc0d19/1409443495323/?format=1500w" alt="Coca-Cola">
                 </div>
             </div>
         </div>
