--- a/talentbank.html
+++ b/talentbank.html
@@ -22,6 +22,7 @@ today?">
             <ul class="nav_list">
                 <li><a href="futurist-ceo.html">Faith Popcorn</a></li>
                 <li><a href="trendbank.html">Trendbank</a></li>
+                <li><a href="case-studies.html">Case Studies</a></li>
                 <li><a href="consulting.html">Consulting</a></li>
                 <li><a href="culture-pulse.html">Culture Pulse</a></li>
                 <li><a href="talentbank.html">Talentbank</a></li>
