home updates and fixed culture pulse

--- a/index.html
+++ b/index.html
@@ -36,25 +36,28 @@ today?">
             <a id="fullSiteLink" href="http://www.faithpopcorn.com/" class="full_site">Visit Full Site Here</a>
             <div id="carousel" class="home_carousel hidden">
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53f427e7e4b068e9905b4271/1408548511282/CXC.jpg?format=1500w" alt="CXC: Childfree by choice"></a>
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/5436fb2de4b07f1e91b33fa9/1412889535747/PITTSBURGH+COVER.jpg?format=800w" alt="One Smart City"></a>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfc2ee4b00ca25556f54a/1408548227698/beauty.jpg?format=1500w" alt="Beauty is always on-trend"></a>
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53f427e7e4b068e9905b4271/1408548511282/CXC.jpg?format=800w" alt="CXC: Childfree by choice"></a>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d98c24e4b0b0f496008961/1408548237594/italian.png?format=1500w" alt="Back to the Italian future"></a>
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfc2ee4b00ca25556f54a/1408548227698/beauty.jpg?format=800w" alt="Beauty is always on-trend"></a>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfe32e4b05b5aedd58305/1408548494851/Cupcake.jpg?format=1500w" alt="Move over cupcakes"></a>
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d98c24e4b0b0f496008961/1408548237594/italian.png?format=800w" alt="Back to the Italian future"></a>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53daa14ae4b06489b3093916/1408548500915/Windows.png?format=1500w" alt="The most mesmerizing store windows in NYC"></a>
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfe32e4b05b5aedd58305/1408548494851/Cupcake.jpg?format=800w" alt="Move over cupcakes"></a>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfd19e4b08ff99312d35a/1408548504538/Coffee.jpg?format=1500w" alt="Post-Starbucks Scene"></a>
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53daa14ae4b06489b3093916/1408548500915/Windows.png?format=800w" alt="The most mesmerizing store windows in NYC"></a>
                 </div>
                 <div class="slide">
-                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d928e2e4b0db9fa02ce3f7/1408548506019/heroNew-3.jpg?format=1500w" alt="The power of plush"></a>
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53ecfd19e4b08ff99312d35a/1408548504538/Coffee.jpg?format=800w" alt="Post-Starbucks Scene"></a>
+                </div>
+                <div class="slide">
+                    <a href="#"><img src="http://static.squarespace.com/static/536934b6e4b0c3ef16a97e35/53b49417e4b079c929a5d519/53d928e2e4b0db9fa02ce3f7/1408548506019/heroNew-3.jpg?format=800w" alt="The power of plush"></a>
                 </div>
             </div>
         </div>
